--- a/assets/main.css
+++ b/assets/main.css
@@ -1,29 +1,106 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Anton);
+@media only screen and (max-width: 600px) {
+  .main__description--title {
+    font-size: 30px;
+  }
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
 body {
   font-family: 'Lato', 'Helvetica Neue', sans-serif;
   background-color: #ececec;
 }
+p {
+  font-size: 2rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 
 .Header {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
+.Header__title-avatar {
+  display: flex;
+  flex-direction: column-reverse;
 }
 .Header__avatar {
   border-radius: 50%;
   margin-right: 1rem;
-  width: 120px;
-  height: 120px;
+  width: 25rem;
+  height: 25rem;
+  margin: 1rem;
 }
-.Header-title,
+/* .Header-title
+     */
 .Header__contact-info {
   display: flex;
 }
-.Header-title h3,
-.Header__contact-info h3 {
+.Header__contact-info p {
   margin-right: 15px;
 }
 
+/* #3b3b3b */
+.Title {
+  display: flex;
+  height: 7rem;
+  width: 95%;
+  justify-content: center;
+  align-items: center;
+  background-color: #2aa9cc;
+  border-top-right-radius: 3.5rem;
+  border-bottom-right-radius: 3.5rem;
+}
+.Title h1 {
+  color: #fff;
+  font-size: 4rem;
+}
 
+.Profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
+
+.Experience {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
 .Experience-items {
   display: flex;
 }
@@ -31,7 +108,47 @@ body {
   margin-right: 55px;
 }
 
+.Academic {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
 
+.Skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
 
+.Interest {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
 
+.Languages {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  padding: 2rem 0;
+  border-radius: 2rem;
+  margin: 2rem;
+}
 
