--- a/assets/main.css
+++ b/assets/main.css
@@ -1,14 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Anton);
-@media only screen and (max-width: 600px) {
-  .main__description--title {
-    font-size: 30px;
-  }
-  .footer {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -22,7 +13,7 @@ body {
   background-color: #ececec;
 }
 p {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 h1 {
   font-size: 3rem;
@@ -40,44 +31,59 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 .Header__title-avatar {
   display: flex;
   flex-direction: column-reverse;
 }
-.Header__avatar {
+.Header__avatar-container {
+  display: flex;
+  justify-content: center;
+}
+.Header__avatar-img {
   border-radius: 50%;
   margin-right: 1rem;
-  width: 25rem;
-  height: 25rem;
+  width: 15rem;
+  height: 15rem;
+  margin: 1.5rem;
+}
+.Header__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 1rem;
 }
-/* .Header-title
-     */
-.Header__contact-info {
+.Header__info-contact {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
 }
-.Header__contact-info p {
+.Header__info-contact p {
   margin-right: 15px;
+  margin: 0.3rem;
 }
 
 /* #3b3b3b */
 .Title {
   display: flex;
-  height: 7rem;
+  height: 4rem;
   width: 95%;
   justify-content: center;
   align-items: center;
   background-color: #2aa9cc;
-  border-top-right-radius: 3.5rem;
-  border-bottom-right-radius: 3.5rem;
+  border-top-right-radius: 4.5rem;
+  border-bottom-right-radius: 4.5rem;
 }
 .Title h1 {
   color: #fff;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .Profile {
@@ -86,9 +92,12 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 
 .Experience {
@@ -97,9 +106,12 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 .Experience-items {
   display: flex;
@@ -114,9 +126,12 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 
 .Skills {
@@ -125,9 +140,12 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 
 .Interest {
@@ -136,9 +154,12 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 
 .Languages {
@@ -147,8 +168,11 @@ h3 {
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
   border-radius: 2rem;
   margin: 2rem;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 
