--- a/assets/main.css
+++ b/assets/main.css
@@ -15,6 +15,9 @@ body {
 p {
   font-size: 1.5rem;
 }
+a {
+  font-size: 1.5rem;
+}
 h1 {
   font-size: 3rem;
 }
@@ -33,6 +36,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
@@ -68,6 +72,9 @@ h3 {
   margin: 1rem;
 }
 .Header__info p {
+  margin: 1rem;
+}
+.Header__info a {
   margin: 1rem;
 }
 .Header__info-contact {
@@ -106,10 +113,16 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
     max-width: 100rem */
+}
+.Profile-description {
+  padding: 1.5rem;
+  display: flex;
+  text-align: justify;
 }
 
 .Experience {
@@ -120,6 +133,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
@@ -140,6 +154,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
@@ -154,6 +169,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
@@ -168,6 +184,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
@@ -182,6 +199,7 @@ h3 {
   box-shadow: 0px 10px 10px -6px #c6c6c6;
   border: 0.1rem solid #c6c6c6;
   padding: 2rem 0;
+  padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
 /*     min-width: 70rem
