--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
 * {
   box-sizing: border-box;
   margin: 0;
@@ -28,19 +46,44 @@ h3 {
   font-size: 2rem;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 .Header__title-avatar {
   display: flex;
@@ -62,41 +105,103 @@ h3 {
   flex-direction: column;
   align-items: center;
 }
-.Header__info h2 {
-  margin: 1rem;
+.Header__info >h2 {
+  margin-top: 1rem;
 }
-.Header__info h3 {
-  margin-bottom: 1rem;
+.Header__info >h3 {
+  margin-top: 1rem;
 }
-.Header__info div {
-  margin: 1rem;
+.Header__info >div {
+  margin-top: 1rem;
 }
-.Header__info p {
-  margin: 1rem;
+.Header__info >p {
+  margin-top: 1rem;
 }
-.Header__info a {
-  margin: 1rem;
-}
-.Header__info-contact {
+.Header__infoContainer {
   width: 100%;
+  display: flex;
+  flex-wrap: row;
+  padding: 1rem;
+}
+.Header__infoContainer .Header__info-contact {
+  width: 50%;
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #c6c6c6;
+  padding: 2rem 0;
+  padding-bottom: 0;
+  border-radius: 2rem;
+  margin: 0.8rem;
+/*     min-width: 70rem
+    max-width: 100rem */
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+.Header__infoContainer .Header__info-contact .Header__info-contactElements {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem;
 }
-.Header__info-contact p {
-  margin-right: 15px;
-  margin: 0.3rem;
+.Header__infoContainer .Header__info-contact .Header__info-contactElements >p {
+  margin-top: 0.5rem;
+}
+.Header__infoContainer .Header__info-contact .Header__info-contactElements >a {
+  margin: 0.5rem 0;
+}
+.Header__infoContainer .Header__info-social {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Header__infoContainer .Header__info-social .Header__info-socialLinks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Header__infoContainer .Header__info-social .Header__info-socialLinks >a {
+  margin-top: 0.5rem;
 }
 
-/* #3b3b3b */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Title {
   display: flex;
   height: 4rem;
   width: 95%;
   justify-content: center;
   align-items: center;
-  background-color: #2aa9cc;
+  background-color: #299ed1;
   border-top-right-radius: 4.5rem;
   border-bottom-right-radius: 4.5rem;
 }
@@ -105,19 +210,87 @@ h3 {
   font-size: 3rem;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
+.Subtitle {
+  width: 100%;
+  display: flex;
+  height: 3rem;
+  width: 95%;
+  justify-content: center;
+  align-items: center;
+  background-color: #97989d;
+  border-top-right-radius: 4.5rem;
+  border-bottom-right-radius: 4.5rem;
+}
+.Subtitle h1 {
+  color: #fff;
+  font-size: 2rem;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Profile {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 .Profile-description {
   padding: 1.5rem;
@@ -125,19 +298,44 @@ h3 {
   text-align: justify;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Experience {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 .Experience-items {
   display: flex;
@@ -146,63 +344,163 @@ h3 {
   margin-right: 55px;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Academic {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Skills {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Interest {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  background-color: #ececec;
+}
+p {
+  font-size: 1.5rem;
+}
+a {
+  font-size: 1.5rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 2rem;
+}
 .Languages {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
+  box-shadow: 0px 10px 10px -6px secundary-color;
+  border: 0.1rem solid secundary-color;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 0.8rem;
-/*     min-width: 70rem
-    max-width: 100rem */
 }
 
