--- a/assets/main.css
+++ b/assets/main.css
@@ -21,7 +21,6 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -49,7 +48,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -78,12 +76,12 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 .Header__title-avatar {
   display: flex;
@@ -120,27 +118,24 @@ h3 {
 .Header__infoContainer {
   width: 100%;
   display: flex;
-  flex-wrap: row;
+  flex-direction: row;
+  align-items: center;
   padding: 1rem;
+  padding-top: 0;
 }
 .Header__infoContainer .Header__info-contact {
   width: 50%;
-  display: flex;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #c6c6c6;
-  padding: 2rem 0;
-  padding-bottom: 0;
-  border-radius: 2rem;
+  border: 0.1rem solid #ececec;
+  border-radius: 1rem;
   margin: 0.8rem;
+  padding: 0.8rem 0;
 /*     min-width: 70rem
     max-width: 100rem */
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
 }
 .Header__infoContainer .Header__info-contact .Header__info-contactElements {
   display: flex;
@@ -157,7 +152,15 @@ h3 {
   width: 50%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
+  border-radius: 1rem;
+  margin: 0.8rem;
+  padding: 0.8rem 0;
+/*     min-width: 70rem
+    max-width: 100rem */
 }
 .Header__infoContainer .Header__info-social .Header__info-socialLinks {
   display: flex;
@@ -171,7 +174,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -213,7 +215,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -256,7 +257,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -285,15 +285,15 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
-.Profile-description {
-  padding: 1.5rem;
+.Profile-desc {
+  padding: 2rem 5%;
   display: flex;
   text-align: justify;
 }
@@ -301,7 +301,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -330,12 +329,12 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 .Experience-items {
   display: flex;
@@ -347,7 +346,6 @@ h3 {
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -376,18 +374,17 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -416,18 +413,17 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -456,18 +452,17 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 html {
   font-size: 62.5%;
@@ -496,11 +491,11 @@ h3 {
   flex-direction: column;
   justify-content: space-between;
   background-color: #fff;
-  box-shadow: 0px 10px 10px -6px secundary-color;
-  border: 0.1rem solid secundary-color;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
   padding: 2rem 0;
   padding-bottom: 0;
   border-radius: 2rem;
-  margin: 0.8rem;
+  margin: 1.5rem;
 }
 
