--- a/assets/main.css
+++ b/assets/main.css
@@ -23,6 +23,7 @@
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -50,6 +51,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -176,6 +178,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -217,6 +220,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -259,6 +263,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -303,6 +308,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -348,6 +354,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -387,6 +394,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -426,6 +434,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
@@ -465,6 +474,7 @@ h3 {
   margin: 0;
 }
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
 }
 body {
