--- a/assets/main.css
+++ b/assets/main.css
@@ -36,6 +36,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -65,6 +70,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -107,16 +117,13 @@ h3 {
   flex-direction: column;
   align-items: center;
 }
-.Header__info >h2 {
+.Header__info >h2,
+.Header__info h3,
+.Header__info p {
   margin-top: 1rem;
-}
-.Header__info >h3 {
-  margin-top: 1rem;
+  text-align: center;
 }
 .Header__info >div {
-  margin-top: 1rem;
-}
-.Header__info >p {
   margin-top: 1rem;
 }
 .Header__infoContainer {
@@ -127,31 +134,7 @@ h3 {
   padding: 1rem;
   padding-top: 0;
 }
-.Header__infoContainer .Header__info-contact {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-  box-shadow: 0px 10px 10px -6px #c6c6c6;
-  border: 0.1rem solid #ececec;
-  border-radius: 1rem;
-  margin: 0.8rem;
-  padding: 0.8rem 0;
-/*     min-width: 70rem
-    max-width: 100rem */
-}
-.Header__infoContainer .Header__info-contact .Header__info-contactElements {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.Header__infoContainer .Header__info-contact .Header__info-contactElements >p {
-  margin-top: 0.5rem;
-}
-.Header__infoContainer .Header__info-contact .Header__info-contactElements >a {
-  margin: 0.5rem 0;
-}
+.Header__infoContainer .Header__info-contact,
 .Header__infoContainer .Header__info-social {
   width: 50%;
   display: flex;
@@ -166,13 +149,42 @@ h3 {
 /*     min-width: 70rem
     max-width: 100rem */
 }
+.Header__infoContainer .Header__info-contact .Header__info-contactElements,
+.Header__infoContainer .Header__info-social .Header__info-contactElements,
+.Header__infoContainer .Header__info-contact .Header__info-socialLinks,
 .Header__infoContainer .Header__info-social .Header__info-socialLinks {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 1rem;
 }
+.Header__infoContainer .Header__info-contact .Header__info-contactElements >a,
+.Header__infoContainer .Header__info-social .Header__info-contactElements >a,
+.Header__infoContainer .Header__info-contact .Header__info-socialLinks >a,
 .Header__infoContainer .Header__info-social .Header__info-socialLinks >a {
-  margin-top: 0.5rem;
+  margin: 0.5rem 0;
+}
+.Header__infoContainer .Header__info-contact .Header__info-contactElements div,
+.Header__infoContainer .Header__info-social .Header__info-contactElements div,
+.Header__infoContainer .Header__info-contact .Header__info-socialLinks div,
+.Header__infoContainer .Header__info-social .Header__info-socialLinks div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 0.8rem;
+}
+.Header__infoContainer .Header__info-contact .Header__info-contactElements div img,
+.Header__infoContainer .Header__info-social .Header__info-contactElements div img,
+.Header__infoContainer .Header__info-contact .Header__info-socialLinks div img,
+.Header__infoContainer .Header__info-social .Header__info-socialLinks div img {
+  width: 2rem;
+  margin-right: 1rem;
+}
+.Header__infoContainer .Header__info-contact .Header__info-contactElements div p,
+.Header__infoContainer .Header__info-social .Header__info-contactElements div p,
+.Header__infoContainer .Header__info-contact .Header__info-socialLinks div p,
+.Header__infoContainer .Header__info-social .Header__info-socialLinks div p {
+  margin: 0;
 }
 
 * {
@@ -193,6 +205,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -236,6 +253,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -280,6 +302,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -303,8 +330,7 @@ h3 {
   margin: 1.5rem;
 }
 .Profile-desc {
-  padding: 2rem 5%;
-  display: flex;
+  padding: 2rem 10%;
   text-align: justify;
 }
 
@@ -326,6 +352,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -350,9 +381,29 @@ h3 {
 }
 .Experience-items {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem 2rem;
+}
+.Experience-items div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .Experience-item {
-  margin-right: 55px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
+  border-radius: 1rem;
+  margin: 0.8rem;
+  padding: 0.8rem 0;
+/*     min-width: 70rem
+    max-width: 100rem */
+/* h2 */
 }
 
 * {
@@ -373,6 +424,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -414,6 +470,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -455,6 +516,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
@@ -496,6 +562,11 @@ p {
 }
 a {
   font-size: 1.5rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
 }
 h1 {
   font-size: 3rem;
