--- a/assets/main.css
+++ b/assets/main.css
@@ -271,7 +271,7 @@ h3 {
 .Subtitle {
   width: 100%;
   display: flex;
-  height: 3rem;
+  height: auto;
   width: 95%;
   justify-content: center;
   align-items: center;
@@ -282,6 +282,7 @@ h3 {
 .Subtitle h1 {
   color: #fff;
   font-size: 2rem;
+  margin: 0.5rem;
 }
 
 * {
@@ -381,17 +382,11 @@ h3 {
 }
 .Experience-items {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   margin: 1rem 2rem;
 }
-.Experience-items div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.Experience-item {
+.Experience-items .Experience-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -403,7 +398,17 @@ h3 {
   padding: 0.8rem 0;
 /*     min-width: 70rem
     max-width: 100rem */
-/* h2 */
+  width: 100%;
+}
+.Experience-items .Experience-item > * {
+  margin-bottom: 1rem;
+}
+.Experience-items .Experience-item p,
+.Experience-items .Experience-item h3 {
+  margin: 0.3rem 5%;
+}
+.Experience-items .Experience-item p {
+  text-align: justify;
 }
 
 * {
