--- a/assets/main.css
+++ b/assets/main.css
@@ -410,6 +410,9 @@ h3 {
 .Experience-items .Experience-item p {
   text-align: justify;
 }
+.Experience-items .Experience-item .Experience-item-Dates {
+  color: #97989d;
+}
 
 * {
   box-sizing: border-box;
@@ -455,6 +458,39 @@ h3 {
   padding-bottom: 0;
   border-radius: 2rem;
   margin: 1.5rem;
+}
+.Academic-items {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 1rem 2rem;
+}
+.Academic-items .Academic-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
+  border-radius: 1rem;
+  margin: 0.8rem;
+  padding: 0.8rem 0;
+/*     min-width: 70rem
+    max-width: 100rem */
+  width: 100%;
+}
+.Academic-items .Academic-item > * {
+  margin-bottom: 1rem;
+}
+.Academic-items .Academic-item p,
+.Academic-items .Academic-item h3 {
+  margin: 0.3rem 5%;
+}
+.Academic-items .Academic-item p {
+  text-align: justify;
+}
+.Academic-items .Academic-item .Academic-item-Dates {
+  color: #97989d;
 }
 
 * {
