--- a/assets/main.css
+++ b/assets/main.css
@@ -538,6 +538,44 @@ h3 {
   border-radius: 2rem;
   margin: 1.5rem;
 }
+.Skills-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1rem 2rem;
+}
+.Skills-items .Skills-item {
+/* border-subcontainer()
+        background-color: background-color */
+  width: 25rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0.8rem;
+}
+.Skills-items .Skills-item p {
+  margin: 0 1rem;
+  font-size: 2rem;
+}
+.progress-bar-container {
+  width: 100%;
+  height: 2rem;
+  border-radius: 1.25rem;
+  background-color: #ececec;
+}
+.progress-bar-container .progress-bar {
+  border-radius: 1.25rem;
+  height: 2rem;
+  background-color: #299ed1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.progress-bar-container .progress-bar span {
+  font-size: 1rem;
+  color: #fff;
+}
 
 * {
   box-sizing: border-box;
