--- a/assets/main.css
+++ b/assets/main.css
@@ -18,6 +18,10 @@
 @import url(https://fonts.googleapis.com/css?family=Anton);
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Anton);
 /* @import './Media.styl' */
 * {
   box-sizing: border-box;
@@ -555,7 +559,7 @@ h3 {
   }
   .Experience-items .Experience-item {
     width: 48%;
-    height: 30rem;
+    height: auto;
   }
 }
 
@@ -905,5 +909,180 @@ h3 {
 .progress-bar-container .progress-bar span {
   font-size: 1rem;
   color: #fff;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  overflow-x: hidden;
+  background-color: #ececec;
+  max-width: 130rem;
+  min-width: 49rem;
+  margin: auto;
+}
+p {
+  font-size: 2rem;
+}
+a {
+  font-size: 2rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 3rem;
+}
+h3 {
+  font-size: 2.5rem;
+}
+@media (min-width: 1000px) {
+  .Container {
+    display: flex;
+    flex-direction: row;
+  }
+}
+.Certificates {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
+  padding: 2rem 0;
+  padding-bottom: 0;
+  border-radius: 2rem;
+  margin: 1.5rem;
+}
+.Certificates-items {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 1rem 2rem;
+}
+.Certificates-items .Certificates-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0px 10px 10px -6px #c6c6c6;
+  border: 0.1rem solid #ececec;
+  border-radius: 1rem;
+  margin: 0.8rem;
+  padding: 0.8rem 0;
+/*     min-width: 70rem
+    max-width: 100rem */
+  width: 100%;
+}
+.Certificates-items .Certificates-item > * {
+  margin-bottom: 1rem;
+}
+.Certificates-items .Certificates-item p,
+.Certificates-items .Certificates-item h3 {
+  margin: 0.3rem 5%;
+}
+.Certificates-items .Certificates-item p {
+  text-align: justify;
+}
+.Certificates-items .Certificates-item .Certificates-item-Dates {
+  color: #97989d;
+}
+.Certificates-items .Certificates-item .Certificates-item-button {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1rem 3rem;
+}
+.Certificates-items .Certificates-item .Certificates-item-button a {
+  background-color: #299ed1;
+  border: none;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 2rem;
+}
+.Certificates-items .Certificates-item .Certificates-item-button a:hover {
+  background-color: #2077ab;
+}
+@media (min-width: 1000px) {
+  .Certificates-items {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .Certificates-items .Certificates-item {
+    width: 30%;
+    height: auto;
+  }
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+body {
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  overflow-x: hidden;
+  background-color: #ececec;
+  max-width: 130rem;
+  min-width: 49rem;
+  margin: auto;
+}
+p {
+  font-size: 2rem;
+}
+a {
+  font-size: 2rem;
+  text-decoration: none;
+  color: #000;
+}
+a:hover {
+  color: #299ed1;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 3rem;
+}
+h3 {
+  font-size: 2.5rem;
+}
+@media (min-width: 1000px) {
+  .Container {
+    display: flex;
+    flex-direction: row;
+  }
+}
+body {
+  height: 100%;
+}
+body .App__container {
+  height: 100%;
+}
+.Loading {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0 20%;
+  height: 100vh;
+}
+.Loading h1 {
+  text-align: center;
 }
 
