--- a/assets/main.css
+++ b/assets/main.css
@@ -150,14 +150,14 @@ h3 {
 .Header__infoContainer {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   padding: 1rem;
   padding-top: 0;
 }
 .Header__infoContainer .Header__info-contact,
 .Header__infoContainer .Header__info-social {
-  width: 50%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -232,6 +232,16 @@ h3 {
     position: relative;
     bottom: 2.8rem;
     left: 12rem;
+  }
+  .Header .Header__info .Header__infoContainer {
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    position: inherit;
+  }
+  .Header .Header__info .Header__infoContainer div {
+    width: 100%;
+    justify-content: center;
   }
 }
 @media (min-width: 1000px) {
